--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "mongoose": "^4.11.0",
+    "node-fetch": "^1.7.1",
     "node-schedule": "^1.2.3",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
